# crawly-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: container.yml  tests.yml
docs/: IMPLEMENTATION_PLAN.md
docs/superpowers/plans/: 2026-04-22-browser-stealth-hardening.md  2026-04-23-page-search.md  2026-05-12-searxng-provider.md
docs/superpowers/specs/: 2026-04-22-browser-stealth-hardening-design.md  2026-04-23-page-search-design.md  2026-05-12-searxng-provider-design.md
examples/searxng-compose/: .env.example  README.md  docker-compose.yml  settings.yml
scripts/: fingerprint_check.py  http_mcp_smoke.py  run-with-xvfb.sh  run_crawly_mcp_http_container.sh  run_crawly_mcp_stdio_container.sh
skills/: continue-web-search.md
skills/web-search/: SKILL.md
src/crawly_mcp/: __init__.py  __main__.py  _logging.py  browser.py  challenge.py  cli.py  constants.py  errors.py  mcp_cli.py  mcp_server.py  models.py  page_search.py  parsing.py  searxng.py  security.py  service.py  version.py
src/web_search_mcp/: __init__.py  __main__.py  browser.py  challenge.py  cli.py  constants.py  mcp_server.py  models.py  parsing.py  security.py  service.py
tests/: test_browser.py  test_challenge.py  test_cli.py  test_constants.py  test_logging.py  test_mcp_cli.py  test_models.py  test_page_search.py  test_parsing.py  test_searxng_adapter.py  test_security.py  test_service.py  test_service_searxng.py
tests/fixtures/: duckduckgo_results.html  google_results.html  yandex_results.html
tests/fixtures/searxng/: search_response_blocked.html  search_response_empty.json  search_response_good.json
